--- a/net-wireless/unifi/files/unifi.service
+++ b/net-wireless/unifi/files/unifi.service
@@ -4,6 +4,7 @@ Requires=network.target
 After=network.target
 
 [Service]
+User=unifi
 ExecStart=/usr/bin/java -jar /usr/lib/unifi/lib/ace.jar start
 ExecStop=/usr/bin/java -jar /usr/lib/unifi/lib/ace.jar stop
 
