--- a/net-wireless/unifi/files/unifi.service
+++ b/net-wireless/unifi/files/unifi.service
@@ -5,6 +5,7 @@ After=network.target
 
 [Service]
 User=unifi
+WorkingDirectory=/var/lib/unifi
 ExecStart=/usr/bin/java -jar /usr/lib/unifi/lib/ace.jar start
 ExecStop=/usr/bin/java -jar /usr/lib/unifi/lib/ace.jar stop
 
